Update typos in 1.Basic.md

--- a/docus/content/2.Front-Side/1.Basic.md
+++ b/docus/content/2.Front-Side/1.Basic.md
@@ -9,7 +9,7 @@ You can use Meilisearch's power with all `composables` available in this package
 
 ## useMeiliSearch
 
-Use this composable to search into the provide index.
+Use this composable to search in the provided index.
 ```js{}
 <script setup>
 const { search, result } = useMeiliSearch('books') // books is the index name
@@ -33,7 +33,7 @@ Result will be shape like descibe [here](https://www.meilisearch.com/docs/refere
 
 ::alert{type="info"}
 **Result** will be also set into `useState('#INDEX-search-result')` where `#INDEX` is the index name.
-Usefull if you want to use the result in another component.
+Useful if you want to use the result in another component.
 ::
 
 Exemple:
@@ -49,8 +49,8 @@ This composable is the same as `useMeiliSearch` but it will return a `data` obje
 
 `index` and `query` are required.
 
-It will be the intial setup of the search. you can also privide `params` to add some options to the search.
-All options are available [here](https://www.meilisearch.com/docs/reference/api/search#body)
+It will be the initial setup of the search. You can also provide `params` to add some options to the search.
+All options are available [here](https://www.meilisearch.com/docs/reference/api/search#body).
 
 ```js{}
 const { data, refresh } = await useAsyncMeiliSearch({
@@ -64,7 +64,7 @@ const { data, refresh } = await useAsyncMeiliSearch({
 
 ## useMeiliSearchRef
 
-Use this composable you have access to meilisearch from you component.
+Use this composable to access to Meilisearch from your component.
 
 ```js{}
 <script setup>
